# shape-of-beliefs

./: .gitignore  README.md  linear_field_probes.py  pyproject.toml
app/: steering_explorer_app.py
docs/: replication-plan.docx  replication_plan.md
docs/notebooks/: Replication_SoB.ipynb
figures/: figure01.ipynb  figure02.ipynb  figure_convergence_to_distribution.ipynb  figure_linear_field_probe.ipynb  figure_steering_activation_manifold.ipynb
