[tool.setuptools]
packages = []

[project]
name = "shape-of-beliefs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "plotly>=6.5.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
